# magic-web-novel

./: .gitignore  CLAUDE.md  README.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: chapter_router.py  learn_router.py  llm_config_router.py  plan_router.py  project_router.py  query_router.py  review_router.py  setting_router.py  sse_router.py  task_router.py
backend/app/core/: __init__.py  config.py  error_codes.py  logger.py
backend/app/data/: __init__.py  file_io.py  project_registry.py  sqlite_access.py  task_store.py
backend/app/llm/: __init__.py  anthropic_client.py  model_router.py  openai_client.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: chapter_orchestrator.py  chapter_service.py  learn_service.py  llm_service.py  plan_orchestrator.py  project_service.py  prompt_builder.py  query_service.py  review_service.py  setting_service.py  task_manager.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_chapters.py  test_api_llm_configs.py  test_api_plan_settings.py  test_api_projects.py  test_api_review.py  test_api_task.py  test_draft_flow_mock_llm.py  test_filesystem.py  test_flow_and_sse.py  test_sse.py
backend/tests/unit/: test_anthropic_client.py  test_chapter_orchestrator.py  test_error_codes.py  test_file_io.py  test_llm_service.py  test_model_router.py  test_plan_orchestrator.py  test_prompt_builder.py  test_recovery_and_registry.py  test_task_store.py
docs/: README.md
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+51 files in other folders)
