[project]
name = "webnovel-web"
version = "0.1.0"
description = "Web application for Chinese web novel creation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
  "pydantic-settings>=2.0",
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "cryptography>=44.0",
    "aiosqlite>=0.20.0",
    "rank-bm25>=0.2.0",
    "pandas>=2.2.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pyright>=1.1.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
